--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
 
     <!-- External dependencies -->
     <mvel.dep.version>2.1.0.drools1</mvel.dep.version><!-- Warning: This is NOT 2.1.Beta2, which is a rogue, older version -->
-    <camel.version>2.4.0</camel.version>
-    <cxf.version>2.2.9</cxf.version>
-    <springframework.version>2.5.6</springframework.version>
+    <camel.version>2.8.0</camel.version>
+    <cxf.version>2.4.1</cxf.version>
+    <springframework.version>3.0.5.RELEASE</springframework.version>
     <gwt.version>2.2.0</gwt.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
